--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
  "scripts": {
-  "start": "vite"
+  "start": "vite",
+   "build": "vite build",
+    "serve": "vite preview"
  },
  "devDependencies": {
   "autoprefixer": "^10.4.20",
