--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
  "scripts": {
   "start": "vite",
-   "build": "vite build",
-    "serve": "vite preview"
+  "build": "vite build",
+  "preview": "vite preview",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist"
  },
  "devDependencies": {
   "autoprefixer": "^10.4.20",
+  "gh-pages": "^6.1.1",
   "postcss": "^8.4.45",
   "tailwindcss": "^3.4.10"
  },
